--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,8 @@ body {
   padding: 0px;
   font-size: 14px;
   font-family: "Roboto Slab", serif;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
